--- a/BlockChain.ipynb
+++ b/BlockChain.ipynb
@@ -2,8 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import hashlib\n",
@@ -13,8 +15,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "class Block:\n",
@@ -39,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -47,85 +51,97 @@
      "output_type": "stream",
      "text": [
       "The Genesis block has been created \n",
-      "Hash: ca93dcbb7198e7e40bafb11890076df854694f1e801323ab3f9cfbe8a59ea843\n",
+      "Hash: acf96533c851336a5c76ee75bd704bd3cc1f9990bbd032d01cfeb1fa92fc3776\n",
       "Hash data: 2\n",
       "Previous Hash: 0\n",
       "\n",
       "BLock 1 has been created.\n",
-      "Block 1 hash: d7fd5b0fbc1d367502798bd79b930b29d3a6eb30adc238b58828edb3f52a7ad6\n",
-      "Block 1 Previous hash: ca93dcbb7198e7e40bafb11890076df854694f1e801323ab3f9cfbe8a59ea843\n",
-      "Block 1 Data: 1.125\n",
-      "Block 1 Timestamp: 2018-04-06 23:40:04.586003\n",
+      "Block 1 hash: 741f020bc464eafef157b3bc3eff12392d81a6f6441771edaa731f55dcc9d003\n",
+      "Block 1 Previous hash: acf96533c851336a5c76ee75bd704bd3cc1f9990bbd032d01cfeb1fa92fc3776\n",
+      "Block 1 Data: 2.025\n",
+      "Block 1 Timestamp: 2018-04-07 00:24:29.940148\n",
       "\n",
       "BLock 2 has been created.\n",
-      "Block 2 hash: 8fb3ac11fbff52a3a2aa7976ceb4c910536d8cb74d3fdbfef7195e19e6006c4d\n",
-      "Block 2 Previous hash: d7fd5b0fbc1d367502798bd79b930b29d3a6eb30adc238b58828edb3f52a7ad6\n",
-      "Block 2 Data: 2.325\n",
-      "Block 2 Timestamp: 2018-04-06 23:40:04.587005\n",
+      "Block 2 hash: 6eb429a11ed4b13166c4db962035290a41a5e4a200aeb0c8843aadb13fe44bb8\n",
+      "Block 2 Previous hash: 741f020bc464eafef157b3bc3eff12392d81a6f6441771edaa731f55dcc9d003\n",
+      "Block 2 Data: 2.025\n",
+      "Block 2 Timestamp: 2018-04-07 00:24:29.940148\n",
       "\n",
       "BLock 3 has been created.\n",
-      "Block 3 hash: 56996ec0ed910610290c73b2c324728da1fd2defdd8350c1d5ca2610d9178dfb\n",
-      "Block 3 Previous hash: 8fb3ac11fbff52a3a2aa7976ceb4c910536d8cb74d3fdbfef7195e19e6006c4d\n",
-      "Block 3 Data: 0.7\n",
-      "Block 3 Timestamp: 2018-04-06 23:40:04.587005\n",
+      "Block 3 hash: c3f03ecfec23a0c5204e07eb8c4eca1b0ac0bc048e347e3949fd297a2da49d41\n",
+      "Block 3 Previous hash: 6eb429a11ed4b13166c4db962035290a41a5e4a200aeb0c8843aadb13fe44bb8\n",
+      "Block 3 Data: 0.4\n",
+      "Block 3 Timestamp: 2018-04-07 00:24:29.940148\n",
       "\n",
       "BLock 4 has been created.\n",
-      "Block 4 hash: 870ccc59c9ad141d033108d0ecc3f90d000b33dcd249944193d45c2e3ecad505\n",
-      "Block 4 Previous hash: 56996ec0ed910610290c73b2c324728da1fd2defdd8350c1d5ca2610d9178dfb\n",
-      "Block 4 Data: 1.4\n",
-      "Block 4 Timestamp: 2018-04-06 23:40:04.588871\n",
+      "Block 4 hash: 0f708984675d35ceac6b4585a25c326d4ec3b763502c7a6b5e2219f9bf1dea3a\n",
+      "Block 4 Previous hash: c3f03ecfec23a0c5204e07eb8c4eca1b0ac0bc048e347e3949fd297a2da49d41\n",
+      "Block 4 Data: 2.45\n",
+      "Block 4 Timestamp: 2018-04-07 00:24:29.940148\n",
       "\n",
       "BLock 5 has been created.\n",
-      "Block 5 hash: 2c243460b3fd7732e5e90bdbebc24235491dfb7e74193f70115c42b94c54afff\n",
-      "Block 5 Previous hash: 870ccc59c9ad141d033108d0ecc3f90d000b33dcd249944193d45c2e3ecad505\n",
-      "Block 5 Data: 1.85\n",
-      "Block 5 Timestamp: 2018-04-06 23:40:04.588871\n",
+      "Block 5 hash: de64fcf82e9177edcff85a72dae34661b24c5db78dc4b111b54655cb9fc06fb3\n",
+      "Block 5 Previous hash: 0f708984675d35ceac6b4585a25c326d4ec3b763502c7a6b5e2219f9bf1dea3a\n",
+      "Block 5 Data: 2.375\n",
+      "Block 5 Timestamp: 2018-04-07 00:24:29.940148\n",
       "\n",
       "BLock 6 has been created.\n",
-      "Block 6 hash: 3bb8455046e62bf35fac96cb343ea752322371e5f324d773ed6c1e28e86920ae\n",
-      "Block 6 Previous hash: 2c243460b3fd7732e5e90bdbebc24235491dfb7e74193f70115c42b94c54afff\n",
-      "Block 6 Data: 1.375\n",
-      "Block 6 Timestamp: 2018-04-06 23:40:04.588871\n",
+      "Block 6 hash: 0f278b2bdb383eeabf37ba27351d4097b2499058c41ea43a253a47241a42807b\n",
+      "Block 6 Previous hash: de64fcf82e9177edcff85a72dae34661b24c5db78dc4b111b54655cb9fc06fb3\n",
+      "Block 6 Data: 1.5\n",
+      "Block 6 Timestamp: 2018-04-07 00:24:29.940148\n",
       "\n",
       "BLock 7 has been created.\n",
-      "Block 7 hash: 077e400f532889610751c5c4b9f64a4b94afc5cc4cbbf495862f4c55c9c38ee1\n",
-      "Block 7 Previous hash: 3bb8455046e62bf35fac96cb343ea752322371e5f324d773ed6c1e28e86920ae\n",
-      "Block 7 Data: 2.425\n",
-      "Block 7 Timestamp: 2018-04-06 23:40:04.588871\n",
+      "Block 7 hash: 7fb480a4522db3cdd047194820e600883de1e9e4863443c97076ed614554b3cf\n",
+      "Block 7 Previous hash: 0f278b2bdb383eeabf37ba27351d4097b2499058c41ea43a253a47241a42807b\n",
+      "Block 7 Data: 1.825\n",
+      "Block 7 Timestamp: 2018-04-07 00:24:29.940148\n",
       "\n",
       "BLock 8 has been created.\n",
-      "Block 8 hash: 1877e4d91d1209530a97d81e4dc64fb853b8f3018f114d9dc60aac343a2f8f73\n",
-      "Block 8 Previous hash: 077e400f532889610751c5c4b9f64a4b94afc5cc4cbbf495862f4c55c9c38ee1\n",
-      "Block 8 Data: 1.55\n",
-      "Block 8 Timestamp: 2018-04-06 23:40:04.588871\n",
+      "Block 8 hash: 5f3458219fc0c779c0bfd9bcae9daf78ad4a09ec5b31a6c26a3fa9b88162b6c5\n",
+      "Block 8 Previous hash: 7fb480a4522db3cdd047194820e600883de1e9e4863443c97076ed614554b3cf\n",
+      "Block 8 Data: 0.8\n",
+      "Block 8 Timestamp: 2018-04-07 00:24:29.940148\n",
       "\n",
       "BLock 9 has been created.\n",
-      "Block 9 hash: 326770f954daa1f108e5469a40750102ce3b5d01d87e9fe2b42bdde4fa08535e\n",
-      "Block 9 Previous hash: 1877e4d91d1209530a97d81e4dc64fb853b8f3018f114d9dc60aac343a2f8f73\n",
-      "Block 9 Data: 2.2\n",
-      "Block 9 Timestamp: 2018-04-06 23:40:04.589870\n",
+      "Block 9 hash: 15bb7fec89d1417464836c3cccea9f8ca930ea4c0baeaff637cde7d1a7d3b095\n",
+      "Block 9 Previous hash: 5f3458219fc0c779c0bfd9bcae9daf78ad4a09ec5b31a6c26a3fa9b88162b6c5\n",
+      "Block 9 Data: 1.975\n",
+      "Block 9 Timestamp: 2018-04-07 00:24:29.940148\n",
       "\n",
       "BLock 10 has been created.\n",
-      "Block 10 hash: 2f3194b4c5e29d8140d0bfe97ac5bee0939a1bf071247121d30e39cc9ed2ae01\n",
-      "Block 10 Previous hash: 326770f954daa1f108e5469a40750102ce3b5d01d87e9fe2b42bdde4fa08535e\n",
-      "Block 10 Data: 1.45\n",
-      "Block 10 Timestamp: 2018-04-06 23:40:04.589870\n",
+      "Block 10 hash: 1f191b7aaa44d1a2a98cde5d6e231fabecae25652e69b484695fe48ef676809b\n",
+      "Block 10 Previous hash: 15bb7fec89d1417464836c3cccea9f8ca930ea4c0baeaff637cde7d1a7d3b095\n",
+      "Block 10 Data: 0.25\n",
+      "Block 10 Timestamp: 2018-04-07 00:24:29.940148\n",
       "\n"
      ]
     }
    ],
    "source": [
     "block_chain = [Block.create_genisis_block(2)]\n",
+    "Previous=[]\n",
+    "Hash=[]\n",
+    "Data=[]\n",
     "print (\"The Genesis block has been created \")\n",
     "print (\"Hash: \"+str(block_chain[-1].hash))\n",
     "print (\"Hash data: \"+str(block_chain[-1].data))\n",
     "print (\"Previous Hash: \"+str(block_chain[-1].previoushash))\n",
     "print ()\n",
+    "\n",
+    "Previous.append(block_chain[-1].previoushash)\n",
+    "Hash.append(block_chain[-1].data)\n",
+    "Data.append(block_chain[-1].data)\n",
+    "\n",
+    "\n",
     "num_blocks_to_add = 10\n",
     "\n",
     "for i in range(1,num_blocks_to_add+1):\n",
     "    block_chain.append(Block(block_chain[-1].hash, random.randint(1,100)/40, datetime.datetime.now()))\n",
-    "    \n",
+    "    Previous.append(block_chain[-i].previoushash)\n",
+    "    Hash.append(block_chain[-i].data)\n",
+    "    Data.append(block_chain[-i].data)\n",
+    "\n",
     "    print (\"BLock \"+str(i)+\" has been created.\")\n",
     "    print (\"Block \"+str(i)+\" hash: \"+str(block_chain[i].hash))\n",
     "    print (\"Block \"+str(i)+\" Previous hash: \"+str(block_chain[i].previoushash))\n",
@@ -136,10 +152,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'8d9744b769ecc5c497ce7903780249d98279eae50237206db3e9b66ecbe1bb53'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "    "
+   ]
   }
  ],
  "metadata": {
@@ -147,6 +176,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
